Add exponential rates
