# api/endpoints.go
@@ -77,7 +77,7 @@ func DecreaseNumStat(g *gin.Context) {
 // @Accept json
 // @Produce json
 // @Success 200 {number} Current Value
-// @Router /read/num/{name}/{label} [get]
+// @Router /read/num/value/{name}/{label} [get]
 func ReadStatNameLabel(g *gin.Context) {
 	name := g.Params.ByName("name")
 	label := g.Params.ByName("label")
@@ -94,10 +94,44 @@ func ReadStatNameLabel(g *gin.Context) {
 // @Accept json
 // @Produce json
 // @Success 200 {object} JSONNumReadResult "desc"
-// @Router /read/num/{name} [get]
+// @Router /read/num/value/{name} [get]
 func ReadStatName(g *gin.Context) {
 	name := g.Params.ByName("name")
 
 	values := internal.ReadNumName(name)
 	g.JSON(http.StatusOK, values)
+}
+
+// ReadStatNameLabelExponentialRate godoc
+// @Summary Read an exponential *estimate* of a numeric rate of change
+// @Schemes
+// @Param name path string true "Stat name"
+// @Param label path string true "Stat label"
+// @Description Read rate estimate of a specific statistic. Not suitable for accuracy, but great for quickly comparing stats.
+// @Accept json
+// @Produce json
+// @Success 200 {number} Exponential Rate estimate
+// @Router /read/num/exponentialrate/{name}/{label} [get]
+func ReadStatNameLabelExponentialRate(g *gin.Context) {
+	name := g.Params.ByName("name")
+	label := g.Params.ByName("label")
+
+	value := internal.ReadNumExponentialRate(name, label)
+	g.JSON(http.StatusOK, gin.H{"value": value})
+}
+
+// ReadStatNameExponentialRates godoc
+// @Summary Read all rate estimates for a stat name
+// @Schemes
+// @Param name path string true "Stat name"
+// @Description Read rate estimates of a specific statistic. Not suitable for accuracy, but great for quickly comparing stats.
+// @Accept json
+// @Produce json
+// @Success 200 {number} Exponential Rate estimate
+// @Router /read/num/exponentialrate/{name} [get]
+func ReadStatNameExponentialRates(g *gin.Context) {
+	name := g.Params.ByName("name")
+
+	value := internal.ReadNumExponentialRates(name)
+	g.JSON(http.StatusOK, gin.H{"value": value})
 }
